Added other post controller logic
