# app.js
@@ -3,6 +3,7 @@ import morgan from 'morgan'
 import express from 'express'
 import cors from 'cors'
 import swaggerUI from 'swagger-ui-express'
+import dotenv from 'dotenv'
 
 import swaggerDocument from './swagger.json'
 import createTables from './configs/migrations'
@@ -10,7 +11,11 @@ import Errors from './helpers/Errors/Errors'
 import authRoutes from './routes/users'
 import postsRoutes from './routes/posts'
 
+dotenv.config()
+
 const PORT = process.env.PORT || 5000
+
+const basePath = '/api/v1'
 
 const options = {
 	explorer: true,
@@ -24,10 +29,10 @@ app.use(cors())
 app.use(express.json())
 app.use(express.urlencoded({ extended: false }))
 
-app.use('/v1/api/auth', authRoutes)
-app.use('/v1/api/posts', postsRoutes)
+app.use('/api-docs', swaggerUI.serve, swaggerUI.setup(swaggerDocument, options))
 
-app.use('/', swaggerUI.serve, swaggerUI.setup(swaggerDocument, options))
+app.use(`${basePath}/auth`, authRoutes)
+app.use(`${basePath}/posts`, postsRoutes)
 
 app.use(Errors.error404)
 app.use(Errors.generalError)
