# models/Post.js
@@ -1,5 +1,4 @@
 import dbConnection from '../configs/database'
-import User from './User'
 
 export default class Post {
 	constructor(title, content, image_url, author_id, category) {
@@ -14,11 +13,24 @@ export default class Post {
 
 	async save() {
 		try {
-			const categoryQuery = 'INSERT INTO categories (category) VALUES (?);'
+			const categoryQuery =
+				'SELECT categories.id FROM categories WHERE categories.category = ?;'
 			const [rows, _] = await dbConnection.execute(categoryQuery, [
 				this.category,
 			])
-			this.categoryId = rows.insertId
+			if (!rows.length) {
+				const [
+					newRow,
+					_,
+				] = await dbConnection.execute(
+					'INSERT INTO categories (category) VALUES (?);',
+					[this.category]
+				)
+				console.log(newRow)
+				this.categoryId = newRow.insertId
+			} else {
+				this.categoryId = rows[0].id
+			}
 			const postQuery =
 				'INSERT INTO posts (title, content, image_url, author_id, category_id) VALUES (?, ?, ?, ?, ?);'
 			const [postRows, field] = await dbConnection.execute(postQuery, [
@@ -27,7 +39,7 @@ export default class Post {
 				this.image_url,
 				this.author_id,
 				this.categoryId,
-      ])
+			])
 			return postRows.insertId
 		} catch (error) {
 			throw error
@@ -78,15 +90,18 @@ export default class Post {
 			const [post, _] = await dbConnection.execute(query, [postId])
 			return post
 		} catch (error) {
-      throw error
-    }
+			throw error
+		}
 	}
 
 	static async getAllPost(userId, limit) {
 		try {
 			const query =
-				"SELECT posts.id, posts.title, posts.content, posts.edited, posts.created_on, posts.image_url, COUNT(posts.title) AS 'total posts', CONCAT(users.firstname, ' ', users.lastname) AS author, categories.category AS category FROM posts INNER JOIN users ON posts.author_id = users.id INNER JOIN categories ON posts.category_id = categories.id WHERE users.id = ? ORDER BY posts.created_on ASC GROUP BY posts.title LIMIT ?;"
-			const [posts, _] = dbConnection.execute(query, [userId, limit])
+				"SELECT posts.id, posts.title, posts.content, posts.edited, posts.created_on, posts.image_url, CONCAT(users.firstname, ' ', users.lastname) AS author, categories.category AS category FROM posts INNER JOIN users ON posts.author_id = users.id INNER JOIN categories ON posts.category_id = categories.id WHERE users.id = ? ORDER BY posts.created_on ASC LIMIT ?;"
+			const [posts, _] = await dbConnection.execute(query, [
+				userId,
+				Math.abs(limit),
+			])
 			return posts
 		} catch (error) {
 			throw error
@@ -96,8 +111,8 @@ export default class Post {
 	static async getFeeds(limit) {
 		try {
 			const query =
-				"SELECT posts.id, posts.title, posts.content, posts.edited, posts.created_on, posts.image_url, CONCAT(users.firstname, ' ', users.lastname) AS author, COUNT(posts.title) AS 'total posts', categories.category AS category FROM posts INNER JOIN users ON posts.author_id = users.id INNER JOIN categories ON posts.category_id = categories.id ORDER BY posts.created_on ASC GROUP BY posts.title LIMIT ?;"
-			const [feeds, _] = dbConnection.execute(query, [limit])
+				"SELECT posts.id, posts.title, posts.content, posts.edited, posts.created_on, posts.image_url, CONCAT(users.firstname, ' ', users.lastname) AS author, categories.category AS category FROM posts INNER JOIN users ON posts.author_id = users.id INNER JOIN categories ON posts.category_id = categories.id ORDER BY posts.created_on ASC LIMIT ?;"
+			const [feeds, _] = await dbConnection.execute(query, [Math.abs(limit)])
 			return feeds
 		} catch (error) {
 			throw error
